Added JWT Token

--- a/SocietyApp.API/appsettings.json
+++ b/SocietyApp.API/appsettings.json
@@ -1,7 +1,11 @@
 {
+  "AppSettings":{
+    "Token":"super secerate key"
+  },
   "ConnectionStrings":{
     "DefaultConnection":"Data Source=SocietyApp.db"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
